# VisFormationPlanner

./: README.md
gazebo_sfm_plugin/: CMakeLists.txt
gazebo_sfm_plugin/worlds/: cafe3.world
match_mobile_robotics/data/: data0.yaml  data0_1.yaml  data0_2.yaml  data1.yaml  data10.yaml  data10_1.yaml  data10_2.yaml  data11.yaml  data11_1.yaml  data11_2.yaml  data1_1.yaml  data1_2.yaml  data2.yaml  data2_1.yaml  data2_2.yaml  data3.yaml  data3_1.yaml  data3_2.yaml  data4.yaml  data4_1.yaml  data4_2.yaml  data5.yaml  data5_1.yaml  data5_2.yaml  data6.yaml  data6_1.yaml  data6_2.yaml  data7.yaml  data7_1.yaml  data7_2.yaml  data8.yaml  data8_1.yaml  data8_2.yaml  data9.yaml  data9_1.yaml  data9_2.yaml
match_mobile_robotics/match_gazebo/launch/: match_world_common.launch  scale.launch
match_mobile_robotics/mir/mir_description/urdf/general/: _d435.gazebo.xacro
match_mobile_robotics/mir/mir_description/urdf/mir_100/: mir_100.urdf.xacro
match_mobile_robotics/mir/mir_description/urdf/mir_200/: mir_200.urdf.xacro
match_mobile_robotics/mir/mir_launch_sim/config/: gazebo_joint_state_controller.yaml
vis_formation_planner/: CMakeLists.txt  LICENSE  README.md  lp_plugin.xml  package.xml
vis_formation_planner/DecompROS/decomp_ros_msgs/msg/: Ellipsoid.msg
vis_formation_planner/config/: test-stage.rviz  test.rviz
vis_formation_planner/config/map/: ICRA_1.pgm  ICRA_1.yaml
vis_formation_planner/config/move_base/: liom_planner.yaml
vis_formation_planner/gazebo/worlds/: icra_world.world
vis_formation_planner/include/to_solver/: corridor.hpp  ecbs_planner.hpp  init_traj_planner.hpp  mission.hpp  optimization.h  param.hpp  prioritized_traj_optimization.hpp  prioritized_traj_publisher.hpp
vis_formation_planner/include/traj_tracking/: generate_vertex.h
vis_formation_planner/include/vis_formation_planner/: coarse_path_planner.h  environment.h  lightweight_nlp_problem.h  optimizer_interface.h  planner_config.h  robot_angle_optimizaer.h  time.h  utils.h  vehicle_model.h  yaml_all.h
vis_formation_planner/include/vis_formation_planner/math/: aabox2d.h  box2d.h  generate_obs.h  line_segment2d.h  math_utils.h  polygon2d.h  pose.h  vec2d.h
vis_formation_planner/include/vis_formation_planner/visualization/: color.h  plot.h  visualization.h
vis_formation_planner/launch/: animation.launch  data_anaylisis.launch  demo_fk_test.launch  demo_test.launch  flexble_formation.launch  generate_decomp.launch  test_decomp.launch  test_iris.launch  topo_test.launch  topological_test.launch  vis_test.launch  write_obs_to_world.launch
vis_formation_planner/launch/rviz_config/: single_mir_visualization.rviz
vis_formation_planner/launch/traj_tracking/: animation_demo.launch  control_rectangle_formation.launch  control_triangular_formation.launch  formation_coordination_demo.launch  formation_generation.launch  heterogeneous_rectangle.launch  heterogeneous_triangle.launch
vis_formation_planner/launch/traj_tracking/fg_vel_pub/: fg_test_r1.launch  fg_test_r10.launch  fg_test_r2.launch  fg_test_r3.launch  fg_test_r4.launch  fg_test_r5.launch  fg_test_r6.launch  fg_test_r7.launch  fg_test_r8.launch  fg_test_r9.launch
vis_formation_planner/src/: yaml.cpp
vis_formation_planner/src/animation/: animation_demo.cpp  complete_animation.cpp  data_anaylisis.cpp
vis_formation_planner/src/decomp_util/: generate_decomp.cpp  test_decomp.cpp
vis_formation_planner/src/formation_planning/: animation.cpp  camera_angle_controller.cpp  coarse_path_planner.cpp  dynamic_lines_mover.cpp  environment.cpp  lightweight_nlp_problem.cpp  robot_angle_optimizaer.cpp  utils.cpp  visable_region_test.cpp  writer_obs_to_world.cpp
vis_formation_planner/src/math/: aabox2d.cpp  box2d.cpp  line_segment2d.cpp  math_utils.cpp  polygon2d.cpp  vec2d.cpp
vis_formation_planner/src/trajectory_tracking/: plot.cpp  plot_result.cpp  plot_result3.cpp
vis_formation_planner/src/trajectory_tracking/fc_tracking_controller/: control_rectangle_formation.cpp  control_triangular_formation.cpp
vis_formation_planner/src/trajectory_tracking/fg_tracking_controller/: fg_test_r1.cpp  fg_test_r10.cpp  fg_test_r2.cpp  fg_test_r3.cpp  fg_test_r4.cpp  fg_test_r5.cpp  fg_test_r6.cpp  fg_test_r7.cpp  fg_test_r8.cpp  fg_test_r9.cpp
vis_formation_planner/src/visualization/: color.cpp  plot.cpp
